reworked webpage header system. all webpages now have a single header generator so they are all consistent -- templates in header.html. Added TodoFeature for agent to keep a lst of taks to accomplish. added sysInstSet find_file for ease of searching an fsspace for a file by regex or contains. rebuilt website.